--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,6 @@
     "ionic": "driftyco/ionic-bower#1.0.0"
   },
   "dependencies": {
-    "angular-parse": "https://github.com/theodo/angular-parse"
+    "angular-parse": "theodo/angular-parse#cf03c5f73d3d629e83a1ef7feb7511d1bf6db4e7"
   }
 }
